--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,11 @@
+import com.github.buildsrc.MyPlugin
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
+
+apply plugin: MyPlugin
 
 android {
     namespace 'com.github.creategradlepluginway'
@@ -41,4 +45,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation files('..\\temp\\gradle-7.1.2-sources.jar')
 }
