--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,11 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.github.buildsrc'  //打开这里引用buildSrc下声明的插件
+    id 'com.github.customplugin'
 }
 
 //打开这里直接引用plugin插件
-//apply plugin: MyPlugin
+apply plugin: MyPlugin
 
 android {
     namespace 'com.github.creategradlepluginway'
